[tool.poetry]
name = "pydockerhub"
version = "1.0.0"
description = "DockerHub Client"
authors = ["Tomasz Szpak <tomszp@gmail.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.2.0"
pydantic = "^2.7.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
